--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,17 @@
 buildscript {
     ext.kotlin_version = '1.2.31'
     repositories {
+        maven{
+            url "http://maven.aliyun.com/nexus/content/groups/public"
+        }
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath"org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +22,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{
+            url "http://maven.aliyun.com/nexus/content/groups/public"
+        }
         google()
         jcenter()
     }
